--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=gentcg
+
+# application.properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/gentcg
+spring.datasource.username=flexone
+spring.datasource.password=C7791
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Disable JPA/Hibernate schema generation
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=false
+
+spring.flyway.baseline-on-migrate=true
+
+# Show SQL
+spring.jpa.show-sql=false
