--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=gentcg
 
+jwt.secret=secret
+jwt.expirationMs=30000000000000
+
 # application.properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/gentcg
 spring.datasource.username=flexone
@@ -12,5 +15,4 @@ spring.jpa.generate-ddl=false
 
 spring.flyway.baseline-on-migrate=true
 
-# Show SQL
 spring.jpa.show-sql=false
