--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=gentcg
 
-jwt.secret=secret
-jwt.expirationMs=30000000000000
+jwt.secret=thisIsASecretKeyWhichIsAtLeast32BytesLong
+jwt.expiration-ms=1800000
 
 # application.properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/gentcg
