--- a/server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,14 +1,19 @@
 {
   "properties": [
     {
+      "name": "jwt.secret",
+      "type": "java.lang.String",
+      "description": "The secret used to sign the JWT"
+    },
+    {
       "name": "jwt.expiration-ms",
       "type": "java.lang.String",
       "description": "The expiration time of the JWT in milliseconds"
     },
     {
-      "name": "jwt.secret",
+      "name": "jwt.refresh-ms",
       "type": "java.lang.String",
-      "description": "The secret used to sign the JWT"
+      "description": "The refresh duration of the JWT in milliseconds"
     }
   ]
 }
