--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=gentcg
 
 jwt.secret=thisIsASecretKeyWhichIsAtLeast32BytesLong
 jwt.expiration-ms=1800000
+# 30 minutes
+jwt.refresh-ms=86400000
+# 1 day
 
 # application.properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/gentcg
